bench/out/compute-program/20260907-linux-application-matrix/sources/runtime/bridge/webgpu-addon/doe_napi_internal.h

typedef void* WGPUBuffer;
typedef void* WGPUShaderModule;
typedef void* WGPUBindGroupLayout;
typedef void* WGPUQuerySet;
typedef void* WGPUTextureView;
typedef void* WGPUSampler;
typedef uint32_t WGPUBool;
typedef struct { const char* data; size_t length; } WGPUStringView;
typedef struct { void* next; uint32_t sType; } WGPUChainedStruct;
typedef struct {
    void* nextInChain;
    WGPUStringView label;
    uint64_t usage;
    uint64_t size;
    WGPUBool mappedAtCreation;
} WGPUBufferDescriptor;
typedef struct { void* nextInChain; WGPUStringView label; } WGPUCommandEncoderDescriptor;
typedef struct { void* nextInChain; WGPUStringView label; } WGPUCommandBufferDescriptor;
typedef struct { WGPUChainedStruct chain; WGPUStringView code; } WGPUShaderSourceWGSL;
typedef struct {
    WGPUStringView entryPoint;
    void* layout; /* WGPUPipelineLayout or NULL for "auto" */
} WGPUShaderModuleCompilationHint;
typedef struct {
    void* nextInChain;
    WGPUStringView label;
    size_t compilationHintCount;
    const WGPUShaderModuleCompilationHint* compilationHints;
} WGPUShaderModuleDescriptor;
typedef struct {
    void* nextInChain;
    WGPUShaderModule module;
    WGPUStringView entryPoint;
    size_t constantCount;
    void* constants;
} WGPUComputeState;
typedef struct {
    void* nextInChain;
    WGPUStringView label;
    void* layout;
    WGPUComputeState compute;
} WGPUComputePipelineDescriptor;
typedef struct { void* nextInChain; uint32_t type; WGPUBool hasDynamicOffset; uint64_t minBindingSize; } WGPUBufferBindingLayout;
typedef struct { void* nextInChain; uint32_t type; } WGPUSamplerBindingLayout;
typedef struct { void* nextInChain; uint32_t sampleType; uint32_t viewDimension; WGPUBool multisampled; } WGPUTextureBindingLayout;
typedef struct { void* nextInChain; uint32_t access; uint32_t format; uint32_t viewDimension; } WGPUStorageTextureBindingLayout;
typedef struct {
    void* nextInChain;
    uint32_t binding;
    uint64_t visibility;
    uint32_t bindingArraySize;
    WGPUBufferBindingLayout buffer;
    WGPUSamplerBindingLayout sampler;
    WGPUTextureBindingLayout texture;
    WGPUStorageTextureBindingLayout storageTexture;
} WGPUBindGroupLayoutEntry;
typedef struct { void* nextInChain; WGPUStringView label; size_t entryCount; const WGPUBindGroupLayoutEntry* entries; } WGPUBindGroupLayoutDescriptor;
typedef struct {
    void* nextInChain;
    uint32_t binding;
    WGPUBuffer buffer;
    uint64_t offset;
    uint64_t size;
    WGPUSampler sampler;
    WGPUTextureView textureView;
} WGPUBindGroupEntry;
typedef struct { void* nextInChain; WGPUStringView label; WGPUBindGroupLayout layout; size_t entryCount; const WGPUBindGroupEntry* entries; } WGPUBindGroupDescriptor;
typedef struct { void* nextInChain; WGPUStringView label; size_t bindGroupLayoutCount; const WGPUBindGroupLayout* bindGroupLayouts; uint32_t immediateSize; } WGPUPipelineLayoutDescriptor;
typedef struct {
    const WGPUChainedStruct* nextInChain;
    WGPUQuerySet querySet;
    uint32_t beginningOfPassWriteIndex;
    uint32_t endOfPassWriteIndex;
} WGPUPassTimestampWrites;
typedef WGPUPassTimestampWrites WGPUComputePassTimestampWrites;
typedef WGPUPassTimestampWrites WGPURenderPassTimestampWrites;
typedef struct { void* nextInChain; WGPUStringView label; const WGPUComputePassTimestampWrites* timestampWrites; } WGPUComputePassDescriptor;
typedef struct { uint32_t width; uint32_t height; uint32_t depthOrArrayLayers; } WGPUExtent3D;
typedef struct {
    void* nextInChain; WGPUStringView label; uint64_t usage; uint32_t dimension;
    WGPUExtent3D size; uint32_t format; uint32_t mipLevelCount; uint32_t sampleCount;
    size_t viewFormatCount; const uint32_t* viewFormats;
    uint32_t textureBindingViewDimension;
} WGPUTextureDescriptor;
typedef struct {
    void* nextInChain; WGPUStringView label; uint32_t format; uint32_t dimension;
    uint32_t baseMipLevel; uint32_t mipLevelCount; uint32_t baseArrayLayer; uint32_t arrayLayerCount;
    uint32_t aspect; uint64_t usage;
    uint32_t swizzleR; uint32_t swizzleG; uint32_t swizzleB; uint32_t swizzleA;
} WGPUTextureViewDescriptor;
typedef struct {
    void* nextInChain; WGPUStringView label;
    uint32_t addressModeU; uint32_t addressModeV; uint32_t addressModeW;
    uint32_t magFilter; uint32_t minFilter; uint32_t mipmapFilter;
    float lodMinClamp; float lodMaxClamp; uint32_t compare; uint16_t maxAnisotropy;
} WGPUSamplerDescriptor;
typedef struct { double r; double g; double b; double a; } WGPUColor;
typedef struct {
    void* nextInChain; WGPUTextureView view; uint32_t depthSlice; WGPUTextureView resolveTarget;
    uint32_t loadOp; uint32_t storeOp; WGPUColor clearValue;
} WGPURenderPassColorAttachment;
typedef struct {
    void* nextInChain; WGPUTextureView view;
    uint32_t depthLoadOp; uint32_t depthStoreOp; float depthClearValue; WGPUBool depthReadOnly;
    uint32_t stencilLoadOp; uint32_t stencilStoreOp; uint32_t stencilClearValue; WGPUBool stencilReadOnly;
} WGPURenderPassDepthStencilAttachment;
typedef struct {
    void* nextInChain; WGPUStringView label;
    size_t colorAttachmentCount; const WGPURenderPassColorAttachment* colorAttachments;
    void* depthStencilAttachment; WGPUQuerySet occlusionQuerySet; const WGPURenderPassTimestampWrites* timestampWrites;
} WGPURenderPassDescriptor;
typedef struct { void* nextInChain; WGPUStringView key; double value; } WGPUConstantEntry;